# Crewai

./: Crew1.ipynb
Crewai_session2/first_crew/: pyproject.toml
Crewai_session2/first_crew/src/first_crew/: main.py
Crewai_session2/first_crew/src/first_crew/config/: tasks.yaml
Crewai_session2/second_crew/: pyproject.toml
Crewai_session2/second_crew/src/second_crew/: crew.py  main.py
Crewai_session2/second_crew/src/second_crew/config/: agents.yaml  tasks.yaml
Crewai_session3/coding_agent/: pyproject.toml
Crewai_session3/coding_agent/src/coding_agent/: crew.py  main.py
Crewai_session3/coding_agent/src/coding_agent/api/: app.py
Crewai_session3/coding_agent/src/coding_agent/config/: agents.yaml  tasks.yaml
Crewai_session4/stocks_price/: pyproject.toml
Crewai_session4/stocks_price/src/stocks_price/: crew.py  main.py
Crewai_session4/stocks_price/src/stocks_price/api/: app.py
Crewai_session4/stocks_price/src/stocks_price/config/: agents.yaml  tasks.yaml
crewai_session1/: Crew2.ipynb
