[project]
name = "second_crew"
version = "0.1.0"
description = "second_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.9.3",
    "litellm>=1.75.3",
]

[project.scripts]
second_crew = "second_crew.main:run"
run_crew = "second_crew.main:run"
train = "second_crew.main:train"
replay = "second_crew.main:replay"
test = "second_crew.main:test"
run_with_trigger = "second_crew.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
