[project]
name = "coding_agent"
version = "0.1.0"
description = "coding_agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.9.3",
    "litellm>=1.75.3",
    "markdown>=3.10.1",
    "streamlit>=1.54.0",
]

[project.scripts]
coding_agent = "coding_agent.main:run"
run_crew = "coding_agent.main:run"
train = "coding_agent.main:train"
replay = "coding_agent.main:replay"
test = "coding_agent.main:test"
run_with_trigger = "coding_agent.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
