[project]
name = "stocks_price"
version = "0.1.0"
description = "Stocks_Price using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.9.3",
    "fastapi>=0.128.1",
    "litellm>=1.75.3",
    "markdown>=3.10.1",
    "streamlit>=1.54.0",
    "uvicorn>=0.40.0",
    "yfinance>=1.1.0",
]

[project.scripts]
stocks_price = "stocks_price.main:run"
run_crew = "stocks_price.main:run"
train = "stocks_price.main:train"
replay = "stocks_price.main:replay"
test = "stocks_price.main:test"
run_with_trigger = "stocks_price.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
